# video-transcribe

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSOLE_FEATURES.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  launch.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  transcribe_batch.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: basic_transcription.sh  basic_transcription_windows.bat  config_fast.txt  config_high_quality.txt  python_integration.py
input_mp4/: .gitkeep
outputs/: .gitkeep
tests/: test_console_app.py  test_transcribe_batch.py
